[package]
name = "Bors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.uuid]
version = "1.0.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[dependencies]
tokio-tungstenite = "0.17.1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
url = "2.0.0"
futures-channel = "0.3"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.133", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.19"
lapin = "1.9.0"
tokio-amqp = "1.0.1"
ansi_term = "0.12"
anyhow = "1.0.56"
queues = "1.0.2"